fixed overflow bug

--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -10,6 +10,7 @@
     /*background: -moz-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
     /*background: linear-gradient(to bottom, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
     padding-bottom: 4rem;
+    overflow-x: hidden;
 }
 
 .rootJumbo {
